fix: prevent jumps on the Initial Load (#1668)
* fix: remove repeated section

* fix: improve initial render

* fix: size

* fix: preload blur images

* fix: animate initial screen out

* fix: move blur to public

* fix: images

* fix: change loading background

* fix: remove initial loading page

* fix: styles for large screens

--- a/website/src/components/auth/LoginContainer.css
+++ b/website/src/components/auth/LoginContainer.css
@@ -27,16 +27,23 @@
   background-color: white;
   background-position: bottom center;
   background-image: url("../../images/login/background-secondary@1x.jpg");
+  background-image: url("../../images/login/background-secondary@1x.jpg"),
+    url("https://decentraland.org/images/background-secondary@blur.jpg"),
+    url("https://decentraland.org/images/background@blur.jpg");
   background-image: -webkit-image-set(
-    url("../../images/login/background-secondary@1x.jpg") 1x,
-    url("../../images/login/background-secondary@2x.jpg") 2x,
-    url("../../images/login/background-secondary@3x.jpg") 3x
-  );
+      url("../../images/login/background-secondary@1x.jpg") 1x,
+      url("../../images/login/background-secondary@2x.jpg") 2x,
+      url("../../images/login/background-secondary@3x.jpg") 3x
+    ),
+    url("https://decentraland.org/images/background-secondary@blur.jpg"),
+    url("https://decentraland.org/images/background@blur.jpg");
   background-image: image-set(
-    url("../../images/login/background-secondary@1x.jpg") 1x,
-    url("../../images/login/background-secondary@2x.jpg") 2x,
-    url("../../images/login/background-secondary@3x.jpg") 3x
-  );
+      url("../../images/login/background-secondary@1x.jpg") 1x,
+      url("../../images/login/background-secondary@2x.jpg") 2x,
+      url("../../images/login/background-secondary@3x.jpg") 3x
+    ),
+    url("https://decentraland.org/images/background-secondary@blur.jpg"),
+    url("https://decentraland.org/images/background@blur.jpg");
   background-repeat: no-repeat;
   background-origin: border-box;
   width: 100%;
@@ -53,16 +60,20 @@
   background-color: white;
   background-position: top center;
   background-image: url("../../images/login/background@1x.jpg");
+  background-image: url("../../images/login/background@1x.jpg"),
+    url("https://decentraland.org/images/background@blur.jpg");
   background-image: -webkit-image-set(
-    url("../../images/login/background@1x.jpg") 1x,
-    url("../../images/login/background@2x.jpg") 2x,
-    url("../../images/login/background@3x.jpg") 3x
-  );
+      url("../../images/login/background@1x.jpg") 1x,
+      url("../../images/login/background@2x.jpg") 2x,
+      url("../../images/login/background@3x.jpg") 3x
+    ),
+    url("https://decentraland.org/images/background@blur.jpg");
   background-image: image-set(
-    url("../../images/login/background@1x.jpg") 1x,
-    url("../../images/login/background@2x.jpg") 2x,
-    url("../../images/login/background@3x.jpg") 3x
-  );
+      url("../../images/login/background@1x.jpg") 1x,
+      url("../../images/login/background@2x.jpg") 2x,
+      url("../../images/login/background@3x.jpg") 3x
+    ),
+    url("https://decentraland.org/images/background@blur.jpg");
   overflow: visible;
   align-items: flex-start;
 }
